--- a/bitrix/templates/aspro_kshop/css/custom.css
+++ b/bitrix/templates/aspro_kshop/css/custom.css
@@ -57,3 +57,49 @@ h1 {font-size:24px;}
 }
 
 /*-------  end custom header -------*/
+
+.bx_filter_vertical label {
+    color: #bd104e;
+    padding-left: 5px;
+}
+
+.bx_filter_vertical input[type="checkbox"]:checked + label:before {
+    display: none;
+}
+
+.product-group-links {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #e7e7e7;
+    margin-bottom: 15px;
+}
+
+ul.product-group-links__list {
+    display: block;
+    width: 100%;
+    padding-left: 5px;
+}
+
+li.product-group-links__item {
+    list-style: none;
+    display: inline-block;
+    padding: 12px 10px;
+}
+
+ul li.product-group-links__item:before {
+    content: '';
+    display: none;
+    padding: 0;
+    margin: 0;
+    width: 0;
+}
+
+li.product-group-links__item a {
+    font-size: 13px;
+}
+
+li.product-group-links__item a:active,
+li.product-group-links__item a:focus {
+    color: #000;
+    text-decoration: none;
+}
